cluster/apps/monitoring/grafana/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name grafana
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: default
        - name: authelia
          namespace: default
      services:
        - name: *name
          port: 80
          namespace: monitoring
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
